# NjpiDlsBot

./: bot.py  pyproject.toml
api/: __init__.py  atrust.py  pic.py
db/: __init__.py
src/plugins/: auto_agree.py  auto_group_daka.py  auto_read.py  auto_zzb.py  ban_all_message.py  ksj.py  yunqi.py
src/plugins/aProxy/: __init__.py
src/plugins/atrust/: __init__.py  bean.py  browser.py  main.py
src/plugins/frp/: __init__.py  utils.py
src/plugins/he_suan/: test.py
src/plugins/help/: __init__.py
src/plugins/key_value/: __init__.py
src/plugins/xfb/: __init__.py  dfjl_tool.py  func.py  getInfo.py  moneyTool.py  payElect.py  tool.py
src/plugins/xfb/auto_xfb/: __init__.py  bean.py
