[tool.poetry]
name = "dlsbot"
version = "0.0.114514"
description = "提供校内服务"
authors = ["eya46 <admin@eya46.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "2.0.0"
nonebot-plugin-apscheduler = "^0.3.0"
gino = "^1.0.1"
nonebot-adapter-onebot = "^2.2.4"
httpx = "^0.25.0"
pillow = "^10.0.0"
wcwidth = "^0.2.6"
jinja2 = "^3.1.2"
playwright = "1.36.0"
nonebot-plugin-htmlrender = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[tool.ruff]
line-length = 121
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = [
    "E402", # 导包位置
    "E722", # 空except
    "C901", # 复杂函数名
    "PYI048", # Function body must contain exactly one statement
    "PYI021", # Docstrings should not be included in stubs
    "T201", # no print
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
